# yuhesencontrol16

catkin_ws2025_12_11/src/MK-description/urdf/: Mk-description.urdf
catkin_ws2025_12_11/src/MK-mid-ros/yhs_can_control/: CMakeLists.txt
catkin_ws2025_12_11/src/MK-mid-ros/yhs_can_control/launch/: yhs_can_control_odem.launch
catkin_ws2025_12_11/src/MK-mid-ros/yhs_can_control/scripts/: yhs_odom_node.py
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_nav/: CMakeLists.txt
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_nav/launch/: sentry_move_base_rmp_astar.launch  sentry_move_base_rmp_astar_bspline.launch  sentry_move_base_rmp_astar_mppi.launch  sentry_movebase_rmp.launch
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_nav/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_use_static.yaml  mpc_controller_params_sentry.yaml
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_nav/scripts/: astar_bspline_smoother.py  goal_stopper.py  live_trajectory_plotter.py  mpc_bspline_tracker.py
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_nav/src/: Trans_TF_2d.cpp
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_slam/FAST_LIO/: CMakeLists.txt
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_slam/FAST_LIO/PCD/: scans.bag  traversability_map.pgm  traversability_map.yaml
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_slam/FAST_LIO/config/: mid360.yaml
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_slam/FAST_LIO_LOCALIZATION/: CMakeLists.txt
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_slam/FAST_LIO_LOCALIZATION/config/: ekf_lio_wheel.yaml  mid360.yaml
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_slam/FAST_LIO_LOCALIZATION/launch/: PointsCloud2toLaserscan.launch  localize_urdf_traversability.launch  sentry_build_map.launch  sentry_build_map_urdf.launch  sentry_localize.launch  sentry_localize_urdf.launch  sentry_localize_urdf_traversability.launch  sentry_location_ekf_test.launch
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_slam/FAST_LIO_LOCALIZATION/rviz_cfg/: localization_urdf.rviz  sentry_location_urdf.rviz
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_slam/FAST_LIO_LOCALIZATION/scripts/: global_localization.py
catkin_ws2025_12_11/src/NEXTE_Sentry_Nav/sentry_tools/velocity_smoother_ema/param/: smoother.yaml
catkin_ws2025_12_11/src/mpc_local_planner/mpc_local_planner_examples/cfg/carlike/: mpc_local_planner_params.yaml  mpc_local_planner_params（复件）.yaml  mpc_local_planner_yhs.yaml
catkin_ws2025_12_11/src/mppi_local_planner/: CMakeLists.txt  README.md  critics_plugin.xml  mppi_local_planner_params.yaml  mppi_local_planner_plugin.xml  package.xml
catkin_ws2025_12_11/src/mppi_local_planner/benchmark/: CMakeLists.txt  controller_benchmark.cpp  optimizer_benchmark.cpp
catkin_ws2025_12_11/src/mppi_local_planner/cfg/: MPPILocalPlannerReconfigure.cfg
catkin_ws2025_12_11/src/mppi_local_planner/include/mppi_local_planner/: critic_data.hpp  critic_function.hpp  critic_manager.hpp  motion_models.hpp  mppi_local_planner_ros.hpp  optimizer.hpp
catkin_ws2025_12_11/src/mppi_local_planner/include/mppi_local_planner/critics/: constraint_critic.hpp  cost_critic.hpp  goal_angle_critic.hpp  goal_critic.hpp  path_align_legacy_critic.hpp  path_angle_critic.hpp  path_follow_critic.hpp  prefer_forward_critic.hpp  twirling_critic.hpp  velocity_critic.hpp
catkin_ws2025_12_11/src/mppi_local_planner/include/mppi_local_planner/models/: constraints.hpp  control_sequence.hpp  optimizer_settings.hpp  path.hpp  state.hpp  trajectories.hpp
catkin_ws2025_12_11/src/mppi_local_planner/include/mppi_local_planner/tools/: geometry_utils.hpp  mppi_config.hpp  noise_generator.hpp  path_handler.hpp  trajectory_visualizer.hpp  utils.hpp
catkin_ws2025_12_11/src/mppi_local_planner/src/: critic_manager.cpp  mppi_config.cpp  mppi_local_planner_ros.cpp  noise_generator.cpp  optimizer.cpp  path_handler.cpp  trajectory_visualizer.cpp
catkin_ws2025_12_11/src/mppi_local_planner/src/critics/: constraint_critic.cpp  cost_critic.cpp  goal_angle_critic.cpp  goal_critic.cpp  path_align_legacy_critic.cpp  path_angle_critic.cpp  path_follow_critic.cpp  prefer_forward_critic.cpp  twirling_critic.cpp  velocity_critic.cpp
catkin_ws2025_12_11/src/mppi_local_planner/test/utils/: factory.hpp  models.hpp  utils.hpp
catkin_ws2025_12_11/src/ros_motion_planning/3rd/: conaninfo.txt
catkin_ws2025_12_11/src/ros_motion_planning/src/core/controller/mpc_controller/src/: mpc_controller.cpp
catkin_ws2025_12_11/src/ros_motion_planning/src/core/path_planner/path_planner/include/path_planner/: path_planner_node.h
catkin_ws2025_12_11/src/ros_motion_planning/src/core/path_planner/path_planner/include/path_planner/graph_planner/hybrid_astar_planner/: node_hybrid.h
catkin_ws2025_12_11/src/ros_motion_planning/src/core/path_planner/path_planner/src/: path_planner_node.cpp
catkin_ws2025_12_11/src/ros_motion_planning/src/core/path_planner/path_planner/src/graph_planner/hybrid_astar_planner/: node_hybrid.cpp
catkin_ws2025_12_11/src/ros_motion_planning/src/sim_env/config/: move_base_params.yaml
catkin_ws2025_12_11/src/ros_motion_planning/src/sim_env/config/controller/: lqr_controller_params.yaml  mpc_controller_params.yaml  pid_controller_params.yaml
catkin_ws2025_12_11/src/ros_motion_planning/src/sim_env/config/planner/: graph_planner_params.yaml
catkin_ws2025_12_11/src/sentry_ekf_localization/: CMakeLists.txt  package.xml
catkin_ws2025_12_11/src/sentry_kinematics_bridge/launch/: sentry_kinematics_bridge.launch
catkin_ws2025_12_11/src/sentry_kinematics_bridge/scripts/: twist_to_yhs_ctrl.py  twist_to_yhs_ctrl_mpc.py
catkin_ws2025_12_11/src/sentry_rs_path/: CMakeLists.txt  package.xml
catkin_ws2025_12_11/src/sentry_rs_path/scripts/: reeds_shepp_smoother.py
catkin_ws2025_12_11/src/sentry_traversability/: CMakeLists.txt  package.xml
catkin_ws2025_12_11/src/sentry_traversability/launch/: run_traversability.launch
catkin_ws2025_12_11/src/sentry_traversability/src/: pcd_traversability.cpp
